--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 				<version>3.1</version>
 				<configuration>
 					<source>${java.version}</source>
-					<target>1.7</target>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -43,6 +43,11 @@
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
 			<version>6.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
 		</dependency>
 	</dependencies>
 </project>
